更新版本号

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,4 +1,4 @@
-he.mod.version = beta-1.0
+he.mod.version = beta-1.1
 he.mod.updateDate = 2025 Jul 20
 
 settings.helium = Helium Config
@@ -16,20 +16,20 @@ settings.item.enableEntityInfoDisplay = Enable entity info display
 settings.item.enableHealthBarDisplay = Enable health bar
 settings.item.enableUnitStatusDisplay = Enable status effect display
 settings.item.enableRangeDisplay = Enable entity range display
-settings.item.rangeRenderLevel = (wait to translate) \u8303\u56F4\u663E\u793A\u5668\u8D28\u91CF
+settings.item.rangeRenderLevel = Range display quality
 settings.item.showAttackRange = Show attack range
 settings.item.showHealRange = Show heal range
 settings.item.showOverdriveRange = Show overdrive range
 settings.item.entityInfoScale = Entity info showing scale
 settings.item.entityInfoAlpha = Entity info showing alpha
 
-range.animate.full = (wait to translate) \u7CBE\u7EC6
-range.animate.simplified = (wait to translate) \u7B80\u5316
-range.animate.prof = (wait to translate) \u6027\u80FD
+range.animate.full = Delicate
+range.animate.simplified = Simple
+range.animate.prof = Performance
 
 settings.basic.placement = Placement Panel
 settings.item.enableBetterPlacement = Enable better placement panel
-settings.item.blockColumns = (wait to translate) \u653E\u7F6E\u9762\u677F\u65B9\u5757\u663E\u793A\u5217\u6570
+settings.item.blockColumns = Placement display columns
 
 settings.basic.modsDialog = Mods Manager
 settings.item.enableBetterModsDialog = Enable better mods dialog
@@ -75,7 +75,7 @@ dialog.mods.version = Version\uFF1A{0}
 dialog.mods.jarMod = This mod contains Java program.
 dialog.mods.jsMod = This mod contains JavaScript program.
 dialog.mods.hostMod = This mod will work on the server.
-dialog.mods.deprecated = This mod adapt game version was deprecated.\n[lightgray]missing "minGameVersion:{0}".
+dialog.mods.deprecated = This mod adapted game version was deprecated.\n[lightgray]missing "minGameVersion:{0}".
 dialog.mods.unsupported = Unsupported game version, your game was deprecated.
 dialog.mods.libMissing = Some dependence of this mod was missing.
 dialog.mods.libIncomplete = Some dependence of this mod was load failed.
@@ -136,16 +136,16 @@ dialog.modPacker.version = Version
 dialog.modPacker.packConfig = \uE853 Modpack Configures
 dialog.modPacker.type = Modpack Type
 dialog.modPacker.skipRepeat = Skip repeat file
-dialog.modPacker.rawBackup = Use raw backup file format (compressed file)
+dialog.modPacker.rawBackup = Use a raw backup file format (compressed file)
 dialog.modPacker.force = Force overwrite mod version
 dialog.modPacker.uncheck = Don't check mod availability
-dialog.modPacker.discard = (wait to translate) \u5F53\u524D\u7F16\u8F91\u7684\u4FE1\u606F\u90FD\u5C06\u4E22\u5931
+dialog.modPacker.discard = The information currently edited will be discarded
 dialog.modPacker.editFIle = Edit a Modpack file
 dialog.modPacker.export = Export Modpack
 dialog.modPacker.inModPack = Read in editing Modpack
 dialog.modPacker.completed = Export Modpack complete.
 dialog.modPacker.failed = Export failed.
-dialog.modPacker.metaError = Please check modpack meta info
+dialog.modPacker.metaError = Please check modpack meta-info
 dialog.modPacker.filesError = Please check attached files
 dialog.modPacker.modsError = Some mods are not usable
 dialog.modPacker.modsDependenciesError = Some mods lack dependencies
@@ -153,15 +153,15 @@ dialog.modPacker.modsDependenciesError = Some mods lack dependencies
 modpack.distribute.name = Distribute
 modpack.distribute.description = In distribution mode, modpacks simply install the integrated mods and files into the player's game, and do not operate on the original files except for duplicate files.
 modpack.shadow.name = Shadow
-modpack.shadow.description = In hidden mode, modpacks will disable other mods that the player is currently installing, but will not affect the original game files.
+modpack.shadow.description = Shadow mode, modpacks will disable other mods that the player is currently installing, but will not affect the original game files.
 modpack.override.name = Overwrite
-modpack.override.description = In overwrite mode, installing the modpack will completely overwrite the game directory with the modpack file after a complete backup of the original game files.
+modpack.override.description = Overwrite mode installing the modpack will completely overwrite the game directory with the modpack file after a complete backup of the original game files.
 
 tools.tip.ctrlEntityInfo = Select entity and show details
 tools.tip.configEntityInfo = Entity info display settings
 
 infos.relaunchEnsure = Some configure change must be restart game to take effect
-infos.confirmResetConfig = Are you sure to relaunch game?
+infos.confirmResetConfig = Are you sure to relaunch the game?
 infos.enabledTeams = Enabled Teams
 infos.entityDetails = Details
 infos.entityRange = Range
@@ -170,7 +170,7 @@ infos.statusDisplay = Status
 infos.enableAll = Enable All
 infos.disableAll = Disable All
 infos.allSetting = All Settings
-infos.copied = Link has been copied to clipboard.
+infos.copied = The link has been copied to clipboard.
 infos.wip = WIP
 infos.notImplementYet = Not Implement Yet
 infos.exception = Exception!
@@ -188,4 +188,4 @@ misc.reverse = Reverse Sort
 misc.download = Download
 misc.complete = Complete
 misc.save = Save
-misc.unknow = (wait to translate) \u672A\u77E5
+misc.unknow = Unknow
