紧急修复150版本的单位控制面板崩溃问题

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,8 +12,8 @@ org.gradle.jvmargs=--illegal-access=permit \
 --add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED \
 --add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED
 
-mindustryVersion = v149
-arcVersion = v149
+mindustryVersion = v150.1
+arcVersion = v150.1
 
-modOutputDir =
-debugGamePath =
+modOutputDir = /home/local/.local/share/Mindustry/mods
+debugGamePath = /home/local/Games/mindustry/Mindustry.jar
